@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-01-06T01:18:27Z",
+  "timestamp" : "2025-01-07T01:15:33Z",
   "count_outdated" : 1187,
   "uniques_outdated" : 716,
-  "count" : 1192,
-  "uniques" : 721,
+  "count" : 1193,
+  "uniques" : 722,
   "clones" : [
     {
       "timestamp": "2024-12-25T00:00:00Z",
@@ -43,6 +43,15 @@
     },
     {
       "timestamp": "2025-01-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-01-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
