@@ -1,3 +1,12 @@
+2025-01-07T01:15:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12643292971 # 533
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-07
+* notice: last 14d: unq all: 2 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 716 1187 / 721 1192
+* notice: next accum: outdated-unq outdated-all / unq all: 716 1187 / 722 1193
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-01-06]
+
 2025-01-06T01:18:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12624748251 # 532
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-06
